--- a/.config/zsh/env/history
+++ b/.config/zsh/env/history
@@ -4,9 +4,13 @@
 setopt BANG_HIST                # Treat the '!' character specially during expansion.
 setopt EXTENDED_HISTORY         # Write the history file in the ':start:elapsed;command' format.
 setopt SHARE_HISTORY            # Share history between all sessions.
+setopt INC_APPEND_HISTORY       # Appened to history file as commands are executed
+setopt NO_HIST_BEEP             # Don't beep
 setopt HIST_EXPIRE_DUPS_FIRST   # Expire a duplicate event first when trimming history.
+setopt HIST_IGNORE_DUPS         # Ignore sequential duplicate commands
 setopt HIST_IGNORE_SPACE        # Do not record an event starting with a space.
 setopt HIST_VERIFY              # Do not execute immediately upon history expansion.
+setopt HIST_REDUCE_BLANKS       # Remove excess blanks
 
 HISTFILE="${ZSH_LOG:-$HOME}/.zhistory"
 HISTSIZE=10000
